[metadata]
name = python-rackclient
summary = Client library for RACK API
description-file =
    README.md
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/stackforge/python-rackclient 
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    rackclient

[entry_points]
console_scripts =
    rack = rackclient.shell:main
