[metadata]
name = python-rackclient
summary = Client library for RACK API
description-file =
    README.md
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/stackforge/python-rackclient 
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    rackclient

[entry_points]
console_scripts =
    rack = rackclient.shell:main
rack.command =
    group-list = rackclient.v1.command.groups:ListGroups
    group-show = rackclient.v1.command.groups:ShowGroup
    group-create = rackclient.v1.command.groups:CreateGroup
    group-update = rackclient.v1.command.groups:UpdateGroup
    group-delete = rackclient.v1.command.groups:DeleteGroup
    group-init = rackclient.v1.command.groups:InitGroup
    keypair-list = rackclient.v1.command.keypairs:ListKeypairs
    keypair-show = rackclient.v1.command.keypairs:ShowKeypair
    keypair-create = rackclient.v1.command.keypairs:CreateKeypair
    keypair-update = rackclient.v1.command.keypairs:UpdateKeypair
    keypair-delete = rackclient.v1.command.keypairs:DeleteKeypair
    securitygroup-list = rackclient.v1.command.securitygroups:ListSecuritygroups
    securitygroup-show = rackclient.v1.command.securitygroups:ShowSecuritygroup
    securitygroup-create = rackclient.v1.command.securitygroups:CreateSecuritygroup
    securitygroup-update = rackclient.v1.command.securitygroups:UpdateSecuritygroup
    securitygroup-delete = rackclient.v1.command.securitygroups:DeleteSecuritygroup
    network-list = rackclient.v1.command.networks:ListNetworks
    network-show = rackclient.v1.command.networks:ShowNetwork
    network-create = rackclient.v1.command.networks:CreateNetwork
    network-delete = rackclient.v1.command.networks:DeleteNetwork
    proxy-show = rackclient.v1.command.proxy:ShowProxy
    proxy-create = rackclient.v1.command.proxy:CreateProxy
    proxy-update = rackclient.v1.command.proxy:UpdateProxy
    ps = rackclient.v1.command.processes:PS
    show = rackclient.v1.command.processes:Show
    boot = rackclient.v1.command.processes:Boot
    kill = rackclient.v1.command.processes:Kill

    # applications
    montecarlo = rackclient.v1.command.montecarlo:Montecarlo

